# gyst

./: .env.dev.dist  .env.test.dist  .gitignore
.devcontainer/: devcontainer.json
.devcontainer/scripts/: initialize.sh  post-start.sh
core/: Cargo.toml
core/crates/adapters/: Cargo.toml
core/crates/adapters/src/: lib.rs
core/crates/adapters/src/sea_query_sqlx/: database.rs
core/crates/application/: Cargo.toml
core/crates/application/src/: lib.rs
core/crates/application/src/commands/: database.rs
core/crates/application/src/handlers/: database.rs  mod.rs
core/crates/application/src/ports/: database.rs
core/crates/application/src/ports/database/: connection.rs  initialize.rs  mod.rs
core/crates/domain/src/: lib.rs
core/crates/domain/src/shared/: value_objects.rs
core/crates/domain/src/tenant/: aggregate.rs  events.rs
core/crates/infrastructure/: Cargo.toml
core/crates/infrastructure/src/: integrity.rs  lib.rs
core/crates/infrastructure/src/config/: mod.rs
core/crates/infrastructure/src/database/: database_uri_factory.rs  initialize.rs  migrate.rs  mod.rs  tenant_database_name_builder.rs
core/crates/infrastructure/src/database/sea_query_sqlx/: connect.rs  initialize.rs  initiate.rs  migrate.rs  mod.rs
core/crates/infrastructure/tests/integration/database/: mod.rs  postgres.rs  sqlite.rs
core/crates/infrastructure/tests/integration/infrastructure/: database.rs
core/crates/migrations/shared/src/: lib.rs
core/crates/shared/src/: lib.rs
interfaces/gui/: Cargo.toml
scripts/: add-component.sh
