[workspace]
resolver = "2"
members = [
    "packages/ui",
    "packages/web",
    "packages/desktop",
    "packages/mobile",
    "packages/api",
]

[workspace.package]
name = "loom-gui"
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
dioxus = { version = "0.7.2" }
dioxus-free-icons = { version = "0.10.0", features = ["hero-icons-solid"] }
dioxus-i18n = "0.5.0"
unic-langid = "0.9.6"

# workspace
ui = { path = "packages/ui" }
api = { path = "packages/api" }
