[package]
name = "adapters"
version.workspace = true
edition.workspace = true

[dependencies]
application = { path = "../application" }
infrastructure = { path = "../infrastructure" }

async-trait = { workspace = true }
thiserror = { workspace = true }

[features]
default = ["sea-query-sqlx-postgres"]
sea-query-sqlx = ["infrastructure/sea-query-sqlx"]
sea-query-sqlx-postgres = ["sea-query-sqlx", "infrastructure/sea-query-sqlx-postgres"]
sea-query-sqlx-sqlite = ["sea-query-sqlx", "infrastructure/sea-query-sqlx-sqlite"]

[lints]
workspace = true
